--- a/src/main/res/layout/account_setup.xml
+++ b/src/main/res/layout/account_setup.xml
@@ -82,7 +82,8 @@
                         android:paddingStart="@dimen/standard_padding"
                         android:paddingEnd="@dimen/alternate_padding_right"
                         android:scrollbars="vertical"
-                        android:textColor="@color/login_text_color">
+                        android:textColor="@color/login_text_color"
+                        android:text="${leviia_app_domain_name}">
 
                         <requestFocus />
 
@@ -101,7 +102,8 @@
                 android:paddingEnd="@dimen/standard_half_padding"
                 android:paddingBottom="@dimen/standard_eight_padding"
                 android:text="@string/login_url_helper_text"
-                android:textColor="@color/white_helper_text" />
+                android:textColor="@color/white_helper_text"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/server_status_text"
