--- a/src/main/res/drawable/nextcloud_logo.xml
+++ b/src/main/res/drawable/nextcloud_logo.xml
@@ -1,34 +1,81 @@
-<!--
-  ~
-  ~ Nextcloud Android client application
-  ~
-  ~ @author Tobias Kaminsky
-  ~ Copyright (C) 2021 Tobias Kaminsky
-  ~ Copyright (C) 2021 Nextcloud GmbH
-  ~
-  ~ This program is free software: you can redistribute it and/or modify
-  ~ it under the terms of the GNU Affero General Public License as published by
-  ~ the Free Software Foundation, either version 3 of the License, or
-  ~ (at your option) any later version.
-  ~
-  ~ This program is distributed in the hope that it will be useful,
-  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
-  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
-  ~ GNU Affero General Public License for more details.
-  ~
-  ~ You should have received a copy of the GNU Affero General Public License
-  ~ along with this program. If not, see <https://www.gnu.org/licenses/>.
-  -->
-
-<vector xmlns:tools="http://schemas.android.com/tools"
-    android:autoMirrored="false" android:height="47.11639dp"
-    android:viewportHeight="44.17161" android:viewportWidth="215.62502"
-    android:width="230dp" xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:ignore="VectorRaster">
-    <path android:fillColor="#ffffff" android:fillType="nonZero"
-        android:pathData="m37.338,9.375c-5.788,0 -10.694,3.924 -12.215,9.241 -1.321,-2.82 -4.185,-4.796 -7.484,-4.796 -4.536,0 -8.265,3.729 -8.265,8.265 0,4.536 3.729,8.267 8.265,8.267 3.298,0 6.162,-1.977 7.484,-4.797 1.521,5.317 6.426,9.242 12.215,9.242 5.745,0 10.626,-3.866 12.186,-9.123 1.346,2.756 4.174,4.678 7.426,4.678 4.536,0 8.267,-3.731 8.267,-8.267 0,-4.536 -3.731,-8.265 -8.267,-8.265 -3.252,0 -6.08,1.92 -7.426,4.676 -1.559,-5.257 -6.44,-9.121 -12.186,-9.121zM37.338,14.227c4.369,0 7.86,3.489 7.86,7.858 0,4.369 -3.49,7.86 -7.86,7.86 -4.369,0 -7.858,-3.491 -7.858,-7.86 0,-4.369 3.489,-7.858 7.858,-7.858zM17.64,18.672c1.914,0 3.415,1.499 3.415,3.413 0,1.914 -1.501,3.415 -3.415,3.415 -1.914,0 -3.413,-1.501 -3.413,-3.415 0,-1.914 1.499,-3.413 3.413,-3.413zM56.95,18.672c1.914,0 3.415,1.499 3.415,3.413 0,1.914 -1.501,3.415 -3.415,3.415 -1.914,0 -3.413,-1.501 -3.413,-3.415 0,-1.914 1.499,-3.413 3.413,-3.413z"
-        android:strokeColor="#00000000" android:strokeLineCap="butt"
-        android:strokeLineJoin="miter" android:strokeWidth="2.72896"/>
-    <path android:fillColor="#ffffff"
-        android:pathData="m73.361,14.607c-0.329,0 -0.471,0.188 -0.471,0.517v13.643c0,0.329 0.142,0.515 0.471,0.515h0.378c0.329,0 0.515,-0.186 0.515,-0.515L74.253,17.438l7.447,11.558c0.032,0.051 0.068,0.084 0.103,0.121 0.011,0.013 0.018,0.026 0.03,0.037 0.032,0.029 0.067,0.044 0.101,0.062 0.019,0.01 0.034,0.025 0.055,0.032 0.015,0.005 0.03,0.002 0.046,0.006 0.052,0.014 0.106,0.027 0.169,0.027h0.375c0.329,0 0.471,-0.186 0.471,-0.515L83.051,15.124c0,-0.329 -0.142,-0.517 -0.471,-0.517h-0.375c-0.329,0 -0.517,0.188 -0.517,0.517v11.329l-7.447,-11.558c-0.025,-0.039 -0.056,-0.063 -0.085,-0.094 -0.086,-0.122 -0.222,-0.195 -0.417,-0.195zM162.781,14.794c-0.329,0 -0.188,0.188 -0.188,0.517v4.657c0,0.47 0.046,0.799 0.046,0.799h-0.046c0,0 -0.894,-2.069 -3.387,-2.069 -2.728,0 -4.658,2.164 -4.564,5.362 0,3.199 1.74,5.41 4.516,5.41 2.681,0 3.575,-2.165 3.575,-2.165h0.048c0,0 -0.094,0.283 -0.094,0.659v0.799c0,0.329 0.188,0.471 0.517,0.471h0.33c0.329,0 0.469,-0.188 0.469,-0.517L164.003,15.311c0,-0.329 -0.518,-0.517 -0.847,-0.517zM126.231,14.842c-0.329,0 -0.14,0.188 -0.14,0.517v11.523c0,2.258 1.504,2.54 2.35,2.54 0.376,0 0.517,-0.188 0.517,-0.517v-0.33c0,-0.329 -0.188,-0.469 -0.423,-0.469 -0.47,-0.047 -1.08,-0.189 -1.08,-1.506v-11.242c0,-0.329 -0.518,-0.517 -0.847,-0.517zM109.345,16.064c-0.329,0 -0.517,0.188 -0.517,0.517v2.447,1.176 5.314c0,2.446 1.365,3.811 3.623,3.811 0.423,0 0.563,-0.14 0.563,-0.469v-0.284c0,-0.376 -0.14,-0.47 -0.563,-0.517 -0.8,-0.047 -2.259,-0.329 -2.259,-2.728v-5.175h2.117c0.329,0 0.517,-0.14 0.517,-0.469v-0.142c0,-0.329 -0.188,-0.517 -0.517,-0.517h-2.117v-2.447c0,-0.329 -0.14,-0.517 -0.469,-0.517zM90.61,18.699c-2.822,0 -5.082,2.024 -5.129,5.41 0,3.199 2.353,5.408 5.41,5.408 1.646,0 2.869,-0.705 3.433,-1.128 0.235,-0.188 0.283,-0.424 0.142,-0.659l-0.142,-0.233c-0.141,-0.282 -0.375,-0.33 -0.657,-0.142 -0.47,0.376 -1.413,0.941 -2.73,0.941 -2.117,0 -3.951,-1.506 -3.998,-4.14h7.479c0.282,0 0.517,-0.235 0.517,-0.517 0,-2.963 -1.55,-4.939 -4.326,-4.939zM119.834,18.699c-3.057,0 -5.409,2.258 -5.456,5.456 0,3.199 2.353,5.41 5.41,5.41 1.882,0 3.151,-0.895 3.669,-1.318 0.235,-0.235 0.281,-0.423 0.14,-0.705l-0.14,-0.188c-0.188,-0.282 -0.377,-0.33 -0.659,-0.142 -0.47,0.423 -1.458,1.083 -2.916,1.083 -2.258,0 -4.046,-1.694 -4.046,-4.14 0,-2.493 1.789,-4.186 4.046,-4.186 1.223,0 2.116,0.611 2.586,0.941 0.282,0.188 0.517,0.188 0.705,-0.094l0.142,-0.236c0.235,-0.282 0.187,-0.517 -0.048,-0.705 -0.517,-0.423 -1.646,-1.176 -3.433,-1.176zM135.733,18.699c-3.01,0 -5.456,2.305 -5.456,5.362 0,3.105 2.446,5.456 5.456,5.456 3.01,0 5.456,-2.352 5.456,-5.456 0,-3.057 -2.446,-5.362 -5.456,-5.362zM105.303,18.857c-0.115,0.018 -0.226,0.096 -0.332,0.222l-1.904,2.268 -1.424,1.698 -2.158,-2.57 -1.169,-1.396c-0.106,-0.126 -0.226,-0.195 -0.35,-0.206 -0.124,-0.01 -0.254,0.036 -0.38,0.142l-0.288,0.243c-0.252,0.212 -0.239,0.446 -0.027,0.698l1.904,2.268 1.579,1.884 -2.312,2.753c-0.002,0.002 -0.004,0.005 -0.005,0.006l-1.167,1.389c-0.212,0.252 -0.188,0.518 0.064,0.73l0.288,0.24c0.252,0.212 0.482,0.158 0.693,-0.094l1.902,-2.268 1.426,-1.698 2.158,2.572c0.001,0.002 0.004,0.004 0.005,0.005l1.165,1.391c0.212,0.252 0.478,0.273 0.73,0.062l0.288,-0.24c0.252,-0.212 0.239,-0.446 0.027,-0.698l-1.904,-2.27 -1.579,-1.881 2.312,-2.756c0.002,-0.002 0.004,-0.004 0.005,-0.006l1.167,-1.389c0.212,-0.252 0.188,-0.518 -0.064,-0.73l-0.288,-0.24c-0.126,-0.106 -0.246,-0.147 -0.362,-0.128zM143.966,18.935c-0.329,0 -0.471,0.188 -0.471,0.517v6.067c0,2.681 1.976,3.998 4.422,3.998 2.446,0 4.422,-1.317 4.422,-3.998v-6.067c0.047,-0.329 -0.14,-0.517 -0.469,-0.517h-0.378c-0.329,0 -0.517,0.188 -0.517,0.517v5.692c0,1.599 -1.035,3.058 -3.058,3.058 -1.976,0 -3.058,-1.458 -3.058,-3.058v-5.692c0,-0.329 -0.188,-0.517 -0.517,-0.517zM90.562,19.875c1.505,0 2.822,1.082 2.916,3.245h-6.491c0.329,-2.117 1.834,-3.245 3.575,-3.245zM135.733,19.969c2.211,0 3.998,1.74 3.998,4.092 0,2.446 -1.787,4.234 -3.998,4.234 -2.211,0 -3.999,-1.835 -4.046,-4.234 0,-2.305 1.836,-4.092 4.046,-4.092zM159.3,19.969c2.211,0 3.293,2.023 3.293,4.14 0,2.963 -1.601,4.186 -3.341,4.186 -1.929,0 -3.244,-1.646 -3.291,-4.186 0,-2.634 1.505,-4.14 3.339,-4.14z" android:strokeWidth="0.470385"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:aapt="http://schemas.android.com/aapt"
+    android:width="1000dp"
+    android:height="315dp"
+    android:viewportWidth="1000"
+    android:viewportHeight="315">
+  <path
+      android:pathData="M290.9,137.1c-9,-47.7 -47.9,-83.6 -94.5,-83.6c-41.2,0 -76.4,28.4 -90.2,67.8C-0.4,102.9 -17.9,278.9 94.4,282.9c4.7,0 9.3,-0.3 13.6,-1c87.1,-12.6 96.7,-145.8 181.9,-144.7c0.4,0 0.7,0 1.1,0L290.9,137.1z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="282.95"
+          android:startX="154.389"
+          android:endY="53.44991"
+          android:endX="154.389"
+          android:type="linear">
+        <item android:offset="0.001901455" android:color="#FFFFFFFF"/>
+        <item android:offset="1" android:color="#B2FFFFFF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M107.9,281.9c87.1,-12.6 96.7,-145.8 181.9,-144.7c0.4,0 0.7,0 1.1,0c106.1,2.2 86.3,144.2 10,144.8C240.4,282.4 107.9,281.9 107.9,281.9">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="137.24321"
+          android:startX="236.0904"
+          android:endY="282.2051"
+          android:endX="236.0904"
+          android:type="linear">
+        <item android:offset="0.001901455" android:color="#FFFFFFFF"/>
+        <item android:offset="1" android:color="#B2FFFFFF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M387,59.9c-3.2,-0.4 -6.1,-0.8 -9.1,-1c-15,-1.3 -29.8,-0.9 -44.3,3.7c-9.1,2.9 -17.1,7.5 -22.8,15.4c-5.3,7.5 -8.4,15.9 -10,24.9c-0.7,4.2 -1.1,8.5 -1.4,13c14.4,-15.9 31.3,-28.5 49.5,-39.4c-16.5,13 -31.7,27.1 -43.2,45.1c0.5,0.3 0.9,0.5 1.2,0.6c13.6,3.5 27,3.7 39.9,-2.7c10.5,-5.2 18.1,-13.1 21.8,-24.4c1.4,-4.4 2.7,-8.8 4,-13.2c2.4,-8.2 6.9,-15 13.4,-20.6c0.2,-0.2 0.4,-0.3 0.6,-0.5C386.6,60.5 386.7,60.4 387,59.9z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="91.38901"
+          android:startX="299.3658"
+          android:endY="91.38901"
+          android:endX="386.9658"
+          android:type="linear">
+        <item android:offset="0.001901455" android:color="#FFFFFFFF"/>
+        <item android:offset="1" android:color="#B2FFFFFF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M297.4,32.2c0,0.3 -0.1,0.6 -0.1,0.9c0.2,5 -1.4,9.6 -3.9,13.9c-1.4,2.4 -2.9,4.8 -4,7.3c-3.6,7.8 -2.5,15.4 1.6,22.7c2.2,3.9 5.3,7.1 9.2,9.9c2.5,-5.1 6.2,-9.4 5.8,-15.5c-0.3,-5.1 -0.1,-10.3 -0.1,-15.7c0.8,6 1.7,11.9 2.5,18c0.6,-0.5 1.1,-0.9 1.6,-1.3c2.7,-2 5.3,-4.2 8.1,-6c1.4,-0.9 1.8,-1.7 1.5,-3.3c-0.8,-5.2 -3.1,-9.9 -6,-14.2c-4.1,-6.2 -9.3,-11.5 -15.1,-16.2c-0.2,-0.2 -0.5,-0.4 -0.8,-0.6C297.8,32.2 297.6,32.2 297.4,32.2z">
+    <aapt:attr name="android:fillColor">
+      <gradient 
+          android:startY="59.45001"
+          android:startX="287.1907"
+          android:endY="59.45001"
+          android:endX="319.7419"
+          android:type="linear">
+        <item android:offset="0.001901455" android:color="#FFFFFFFF"/>
+        <item android:offset="1" android:color="#B2FFFFFF"/>
+      </gradient>
+    </aapt:attr>
+  </path>
+  <path
+      android:pathData="M419.3,141.6h17.9v110h68v15.6h-85.9V141.6z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M617,251.6v15.6h-91.1V141.6h88.6v15.6h-70.7v38.6h63v15.3h-63v40.5H617z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M753.4,141.6l-55.1,125.6h-17.8l-55.3,-125.6h19.4l45.2,103.2l45.6,-103.2L753.4,141.6L753.4,141.6z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M764,115.7c0,-6.3 5,-11.3 11.7,-11.3s11.7,4.8 11.7,10.9c0,6.5 -4.8,11.5 -11.7,11.5C769,126.8 764,122 764,115.7zM767,141.7h17.2v125.5H767V141.7z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M814,115.5c0,-6.3 5,-11.3 11.7,-11.3s11.7,4.8 11.7,10.9c0,6.5 -4.8,11.5 -11.7,11.5C819.1,126.6 814,121.8 814,115.5zM817.1,141.7h17.2v125.5h-17.2V141.7z"
+      android:fillColor="#FFFFFF"/>
+  <path
+      android:pathData="M925.3,141.6c0,0 -16.4,1.6 -9,18.4c7.4,16.7 0,-0.1 0,-0.1l5.1,11.7l0,0l0,0l21.9,49.8h-52.5l-19.6,0.1l-20.6,45.7h18.5l13.8,-31.4h66.7l13.8,31.4h18.8L925.3,141.6z"
+      android:fillColor="#FFFFFF"/>
 </vector>
