--- a/src/main/res/layout/account_setup.xml
+++ b/src/main/res/layout/account_setup.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/standard_padding"
             android:contentDescription="@string/app_name"
+            android:adjustViewBounds="true"
             android:src="@drawable/logo" />
 
         <LinearLayout
