--- a/app/src/main/res/layout/account_setup.xml
+++ b/app/src/main/res/layout/account_setup.xml
@@ -42,6 +42,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="@dimen/standard_padding"
             android:contentDescription="@string/app_name"
+            android:adjustViewBounds="true"
             android:src="@drawable/logo" />
 
         <LinearLayout
@@ -82,7 +83,8 @@
                         android:paddingStart="@dimen/standard_padding"
                         android:paddingEnd="@dimen/alternate_padding_right"
                         android:scrollbars="vertical"
-                        android:textColor="@color/login_text_color">
+                        android:textColor="@color/login_text_color"
+                        android:text="${leviia_app_domain_name}">
 
                         <requestFocus />
 
@@ -101,7 +103,8 @@
                 android:paddingEnd="@dimen/standard_half_padding"
                 android:paddingBottom="@dimen/standard_eight_padding"
                 android:text="@string/login_url_helper_text"
-                android:textColor="@color/white_helper_text" />
+                android:textColor="@color/white_helper_text"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/server_status_text"
